--- a/webapp/templates/session.html
+++ b/webapp/templates/session.html
@@ -14,18 +14,20 @@
     <div class='container'>
       <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
       <script type=text/javascript>
+
         function countdown() 
-        {
+        {       
           var sec = 5
           var timer = setInterval(function() {
-          if (sec === -1) {
-            clearInterval(timer)
-          } else {
-            $.getJSON('/grab_data');
-            $("#timer").text(sec--);
-            // grab data 
-          }
-      }, 1000);
+            if (sec === -1) {
+              clearInterval(timer)
+            } else {
+              $.getJSON('/grab_data');
+              //$.post('/grab_data', text: {{ name }} );
+              $("#timer").text(sec--);
+              // grab data 
+            }
+          }, 1000);
         }
       </script>
 
